unpackaged/main/default/objects/DPSA_Contracted_Discount__c/DPSA_Contracted_Discount__c.object-meta.xml
<CustomObject>
    <description>Stores Tiered contracted DPSA pricing</description>
    <label>MSA Software Discount Tier</label>
    <nameField>
        <label>DPSA Contracted Discount Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DPSA Contracted Discount</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>