unpackaged/main/default/objects/DPSA_Contracted_Discount__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>DPSA_Contracted_Discount</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>