unpackaged/main/default/objects/DPSA_Contracted_Discount__c/fields/DPSA_contract__c.field-meta.xml
<CustomField>
    <fullName>DPSA_contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DPSA contract</label>
    <referenceTo>DPSA_contract__c</referenceTo>
    <relationshipName>DPSA_Contracted_Discount</relationshipName>
    <type>Lookup</type>
</CustomField>