unpackaged/main/default/objects/DPSA_Contracted_Discount__c/fields/Lower_Bound__c.field-meta.xml
<CustomField>
    <fullName>Lower_Bound__c</fullName>
    <label>Lower Bound</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>